--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,11 @@
-$primary-color: #444;
+@import "config";
 
 * {
   box-sizing: border-box;
 }
 
 body {
+  @include background();
   background: $primary-color;
   color: #fff;
   height: 100%;
@@ -36,4 +37,44 @@ h3 {
 a {
   // all links
   color: #fff;
+  text-decoration: none;
+}
+
+header {
+  position: fixed; // want this to awlays be on the top
+  z-index: 2;
+  width: 100%;
+}
+
+.text-secondary {
+  color: $secondary-color;
+}
+
+main {
+  padding: 4rem;
+  height: 100%;
+
+  //make icons further apart
+  //make hover thing
+
+  .icons {
+    //only affect icons in main tag
+    margin-top: 1rem;
+
+    a {
+      padding: 0.4rem; //space in between each link
+
+      &:hover {
+        color: $secondary-color;
+        @include easeOut();
+      }
+    }
+  }
+
+  &#home {
+    overflow: hidden; //dont want scroll bars ever on home page
+    h1 {
+      margin-top: 20vh;
+    }
+  }
 }
