Menu Overlay, Easein transition

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,4 +1,5 @@
 // Menu Button
+$opacity: 0.9;
 
 .menu-btn {
   position: absolute; //stick
@@ -35,5 +36,104 @@
         transform: rotate(-45deg) translate(7px, -6px);
       }
     }
+  }
+}
+
+// Menu Overlay
+
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  visibility: hidden;
+
+  &.show {
+    visibility: visible;
+  }
+
+  &-branding,
+  &-nav {
+    display: flex; //make into column
+    flex-flow: column wrap; //going up and down as opposed to r l
+    align-items: center;
+    justify-content: center;
+    float: left; //left of container
+    width: 50%; //each column takes 50% of space
+    height: 100vh; //100% vertical
+    overflow: hidden; //no scroll bars
+  }
+
+  &-nav {
+    margin: 0;
+    padding: 0;
+    background: rgba(darken($primary-color, 5), $opacity);
+    list-style: none; //remove list dots
+    transform: translate3d(0, -100%, 0); //take it off the page
+    @include easeOut; //when show class applied,
+
+    &.show {
+      //slde in from top
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  // Branding Side
+  &-branding {
+    background: rgba($primary-color, $opacity);
+    transform: translate3d(0, 100%, 0);
+    @include easeOut;
+
+    &.show {
+      //slde in from top
+      transform: translate3d(0, 0, 0);
+    }
+
+    .portrait {
+      width: 250px;
+      height: 250px;
+      background: url("../img/portrait.png");
+      border-radius: 50%; //make into circle
+      border: solid 3px $secondary-color;
+      background-size: cover;
+    }
+  }
+
+  .nav-item {
+    //off screen before show
+    transform: translate3d(600px, 0, 0);
+
+    &.show {
+      //slide in from right
+      transform: translate3d(0, 0, 0);
+      @include easeIn;
+    }
+
+    .nav-link {
+      display: inline-block;
+      position: relative;
+      font-size: 30px;
+      text-transform: uppercase;
+      padding: 1rem 0;
+      font-weight: 300;
+      color: #fff;
+      text-decoration: none;
+      @include easeIn;
+
+      &:hover {
+        color: $secondary-color;
+      }
+    }
+    &.current > a {
+      //div with class: nav-link current
+      color: $secondary-color;
+    }
+  }
+}
+
+// Delay each nav item slide by 0.1s
+
+@for $x from 1 through 4 {
+  .nav-item.show:nth-child(#{$x}) {
+    transition-delay: $x * 0.2s;
   }
 }
