--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -6,7 +6,11 @@ $background-opacity: 0.6;
 
 @mixin easeOut {
   //@mixin is like a function
-  transition: all 0.5s ease-out//what time effect;
+  transition: all 0.6s ease-out//what time effect;
+}
+
+@mixin easeIn {
+  transition: all 0.6s ease-in;
 }
 
 @mixin background {
