--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -35,3 +35,30 @@ $background-opacity: 0.6;
     }
   }
 }
+
+// Media Query Mixins
+
+@mixin mediaSm {
+  @media screen and (max-width: 500px) {
+    //any css we put here will only apply if screen if 500px or less
+    @content; //anythin we put inside this mixin in another file, can add this file
+  }
+}
+
+@mixin mediaMd {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin mediaLg {
+  @media screen and (min-width: 769px) and (max-width: 1170px) {
+    @content;
+  }
+}
+
+@mixin mediaXl {
+  @media screen and (min-width: 1171px) {
+    @content;
+  }
+}
