--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -36,6 +36,14 @@ $background-opacity: 0.6;
   }
 }
 
+// Set Text Color
+@function set-text-color($color) {
+  @if (lightness($color) > 40) {
+    @return #000;
+  } @else {
+    @return #fff;
+  }
+}
 // Media Query Mixins
 
 @mixin mediaSm {
