--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -13,7 +13,7 @@ $opacity: 0.9;
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0; // top right btm left
-    background: #fff;
+    background: set-text-color($primary-color);
     @include easeOut;
   }
 
@@ -115,7 +115,7 @@ $opacity: 0.9;
       text-transform: uppercase;
       padding: 1rem 0;
       font-weight: 300;
-      color: #fff;
+      color: set-text-color($primary-color);
       text-decoration: none;
       @include easeIn;
 
