--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,5 @@
 @import "config";
 @import "menu";
-@import "mobile";
 
 * {
   box-sizing: border-box;
@@ -9,8 +8,9 @@
 body {
   @include background();
   background: $primary-color;
-  color: #fff;
-  height: 100%;
+  color: set-text-color($primary-color);
+  //height: 100%;
+  min-height: calc(100vh - 60px);
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5; //height between lines
@@ -27,6 +27,7 @@ h3 {
   &.lg-heading {
     //to settle styling for h1 class= :lg-heading
     font-size: 6rem; // rem is multiplier of html tag font size (16p);
+    justify-content: right;
   }
 
   &.sm-heading {
@@ -38,7 +39,7 @@ h3 {
 
 a {
   // all links
-  color: #fff;
+  color: set-text-color($primary-color);
   text-decoration: none;
 }
 
@@ -80,3 +81,51 @@ main {
     }
   }
 }
+
+.about-info {
+  display: grid;
+  grid-template-areas:
+    "bioimage bio bio"
+    "job1 job2 job3";
+  grid-template-columns: repeat(3, 1fr); //or 1fr 1fr 1fr
+  grid-gap: 2rem;
+  .bio-image {
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: $secondary-color 3px solid;
+  }
+
+  .bio {
+    grid-area: bio;
+    font-size: 1.5rem;
+  }
+
+  .job-1 {
+    grid-area: job1;
+  }
+
+  .job-2 {
+    grid-area: job2;
+  }
+
+  .job-3 {
+    grid-area: job3;
+  }
+
+  .job {
+    background: lighten($primary-color, 5);
+    padding: 0.5rem;
+    border-bottom: $secondary-color 5px solid;
+  }
+}
+
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: darken($primary-color, 10);
+  color: set-text-color($primary-color);
+  height: 60px;
+}
+
+@import "mobile";
