--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -6,11 +6,9 @@
       margin-bottom: 1rem; //relative element (to font size
       max-width: 800px;
     }
-    .sm-heading {
-      &.index {
-        max-width: 500px; //to fit the above
-        text-align: center;
-      }
+    &#home {
+      max-width: 700px; //to fit the above
+      text-align: center;
     }
   }
 }
@@ -23,11 +21,10 @@
       margin-bottom: 1rem; //relative element (to font size
       max-width: 800px;
     }
-    .sm-heading {
-      &.index {
-        max-width: 500px; //to fit the above
-        text-align: center;
-      }
+
+    &#home {
+      max-width: 700px; //to fit the above
+      text-align: center;
     }
   }
 }
