--- a/scss/main.scss
+++ b/scss/main.scss
@@ -147,14 +147,14 @@ main {
 
 // Contact Page
 .boxes {
-  display: flex;
-  flex-wrap: wrap; //when it gets too big, it goes to the next line;
+  display: grid;
+  grid-template-columns: 1fr; //when it gets too big, it goes to the next line;
   justify-content: space-evenly;
   align-items: center;
   margin-top: 1rem;
 
   div {
-    font-size: 3rem;
+    font-size: 2rem;
     border: 3px #fff solid;
     padding: 1.5rem 2.5rem;
     margin-bottom: 3rem;
